--- a/extensions/swt/build.gradle
+++ b/extensions/swt/build.gradle
@@ -43,7 +43,8 @@ test {
             throw new Exception(
                 'SWT tests are not currently supported on Mac due to a Gradle bug ' +
                 '(https://github.com/gradle/gradle/issues/864). You can run other tests ' +
-                'by adding "-x :extensions:swt:test" to Gradle arguments (for example: "./gradlew test -x :extensions:swt:test").' )
+                'by adding "-x :extensions:swt:test" to Gradle arguments ' +
+                '(for example: "./gradlew test -x :extensions:swt:test").' )
         }
     }
 }
