again trying to fix openjdk7 build
Becasue of https://github.com/travis-ci/travis-ci/issues/5227
trying to set custom hostname.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ addons:
     packages:
       - oracle-java8-installer
       - metacity
+  hosts:
+    - glbuild
+  hostname: glbuild
 
 # start metacity window manager before running tests
 before_script:
