Prepare release version 1.11.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 nextReleaseVersion = 1.11
-isSnapshot = true
+isSnapshot = false
 javaTargetVersion = 1.7
 mavenSnapshotsRepositoryId = oss-nexus-snapshots
 mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
