--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-nextReleaseVersion = 1.11.0
-isSnapshot = false
+nextReleaseVersion = 1.11.1
+isSnapshot = true
 javaTargetVersion = 1.7
 mavenSnapshotsRepositoryId = oss-nexus-snapshots
 mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
