updated gradle to 4.4.1 and enable build-cache and parallel execution

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ mavenStagingRepositoryId = oss-nexus-staging
 mavenStagingRepositoryUrl = https://oss.sonatype.org/service/local/staging/deploy/maven2
 sonatypeUsername = dummy
 sonatypePassword = dummyPassword
+org.gradle.parallel=true
+org.gradle.caching=true
