--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = "glazedlists"
 
 include 'core'
+include 'jmh-benchmark'
 include 'extensions:calculation'
 include 'extensions:hibernate'
 include 'extensions:icu4j'
