Fixes #655. ThreadProxyList and SortedList benchmarks + supporting classes were reimplemented with jmh. ListEventPublisher benchmark was obsolete and deleted. Japex extension was deleted.

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ version "$nextReleaseVersion${isSnapshot == "true" ? "-SNAPSHOT" : ""}"
 ext.targetDir = "target/"
 ext.user = System.getProperty("user.name")
 ext.buildTime = new Date()
-def exportedProjects = subprojects.findAll { it.name != 'issuesbrowser' && it.name != 'japex' }
+def exportedProjects = subprojects.findAll { it.name != 'issuesbrowser' && it.name != 'jmh-benchmark' }
 
 /**
  * settings for all modules including root-module
