--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ mavenSnapshotsRepositoryId = oss-nexus-snapshots
 mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
 mavenStagingRepositoryId = oss-nexus-staging
 mavenStagingRepositoryUrl = https://oss.sonatype.org/service/local/staging/deploy/maven2
-sonatypeUsername = dummy
-sonatypePassword = dummyPassword
+sonatypeUsername = "$System.env.SONATYPE_USERNAME"
+sonatypePassword = "$System.env.SONATYPE_PASSWORD"
 org.gradle.parallel=true
 org.gradle.caching=true
