--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,7 @@ mavenSnapshotsRepositoryId = oss-nexus-snapshots
 mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
 mavenStagingRepositoryId = oss-nexus-staging
 mavenStagingRepositoryUrl = https://oss.sonatype.org/service/local/staging/deploy/maven2
+sonatypeUsername = dummy
+sonatypePassword = dummy
 org.gradle.parallel=true
 org.gradle.caching=true
