Initial support for Gradle 5: Fixing compatibility issues with plugins. Fixing broken Javadoc links. JAXB as library dependency instaed of platform module. Commented out Javafx-dependent sub-projects for Java 11/12 in settings.gradle.

--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id "base"
     id "maven"
     id "signing"
-    id "us.kirchmeier.capsule" version "1.0.2"
-    id "biz.aQute.bnd.builder" version "3.3.0"
+    id "it.gianluz.capsule" version "1.0.3"
+    id "biz.aQute.bnd.builder" version "4.1.0"
 }
 
 /**
@@ -108,7 +108,7 @@ task docs(type: Javadoc) {
             "http://docs.oracle.com/javase/8/docs/api/",
             "http://help.eclipse.org/neon/topic/org.eclipse.platform.doc.isv/reference/api/",
             "http://doc.formdev.com/jgoodies-forms/",
-            "http://nachocalendar.sourceforge.net/doc/",
+            "http://nachocalendar.sourceforge.net/apidocs/",
             "http://www.jfree.org/jfreechart/api/javadoc/",
             "http://javadoc.geotoolkit.org/external/swingx/",
             "https://docs.jboss.org/hibernate/orm/current/javadocs/"
