--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 jdk:
   - oraclejdk8
   - openjdk11
-  - openjdk-ea
+  - openjdk12
+#  - openjdk-ea
 sudo: false
 
 env: DISPLAY=:99.0
