--- a/extensions/issuesbrowser/build.gradle
+++ b/extensions/issuesbrowser/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'it.gianluz.capsule'
 
+if (JavaVersion.current().compareTo(JavaVersion.VERSION_11) >= 0) {
+
+    apply plugin: 'org.openjfx.javafxplugin'
+
+    javafx {
+        modules = [ 'javafx.controls', 'javafx.web' ]
+    }
+}
+
 dependencies {
     compile project(':extensions:swt')
     compile project(':extensions:treetable')
