Fix test issues on OpenJDK 11 because of Hibernate upgrade.

--- a/extensions/hibernate/build.gradle
+++ b/extensions/hibernate/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     compile 'org.hibernate:hibernate-core:5.2.17.Final'
+    compile 'org.javassist:javassist:3.23.1-GA'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     compile 'org.glassfish.jaxb:jaxb-runtime:2.3.0.1'
     compile 'com.sun.activation:javax.activation:1.2.0'
