--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,3 +5,17 @@ jobs:
       name: Linux
       pool:
         vmImage: 'ubuntu-16.04'
+  
+  # Mac OS job
+  - template: build-job.yml
+    parameters:
+      name: MacOS
+      pool:
+        vmImage: 'macOS-10.13'
+
+  # Windows job
+  - template: build-job.yml
+    parameters:
+      name: Windows
+      pool:
+        vmImage: 'windows-2019'
