Update Mac OS job to exclude swt tests.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ jobs:
       name: MacOS
       pool:
         vmImage: 'macOS-10.13'
+      tasks: 'build -x :extensions:swt:test'
 
   # Windows job
   - template: build-job.yml
