--- a/build-job.yml
+++ b/build-job.yml
@@ -17,4 +17,4 @@ jobs:
         jdkArchitectureOption: 'x64'
         publishJUnitResults: true
         testResultsFiles: '**/TEST-*.xml'
-        tasks: ${{ tasks }}
+        tasks: ${{ parameters.tasks }}
