--- a/build-job.yml
+++ b/build-job.yml
@@ -19,6 +19,7 @@ jobs:
         export DISPLAY=:1
       displayName: Setup Window Manager
       condition: eq(${{ parameters.initWindowManager }}, true)
+    - bash: printenv
     - task: Gradle@2
       inputs:
         workingDirectory: ''
