--- a/.github/workflows/ci-gradle-build.yml
+++ b/.github/workflows/ci-gradle-build.yml
@@ -23,10 +23,10 @@ jobs:
       run: ./gradlew build
       if: matrix.os == 'ubuntu-latest'
     - name: Build with Gradle (Windows)
-      run: ./gradlew build -PexcludeTests=**/CTPConnectionTest*'
+      run: ./gradlew build -PexcludeTests=**/CTPConnectionTest*
       shell: bash
       if: matrix.os == 'windows-latest'
     - name: Build with Gradle (MacOS)
-      run: ./gradlew build -x :extensions:swt:test'
+      run: ./gradlew build -x :extensions:swt:test
       if: matrix.os == 'macos-latest'
       
