--- a/.github/workflows/ci-gradle-build.yml
+++ b/.github/workflows/ci-gradle-build.yml
@@ -20,10 +20,10 @@ jobs:
         java-version: 1.8
         java-package: jdk+fx
     - name: Build with Gradle (Linux)
-      run: ./gradlew build
+      run: ./gradlew build -x :extensions:swt:test
       if: matrix.os == 'ubuntu-latest'
     - name: Build with Gradle (Windows)
-      run: ./gradlew build -PexcludeTests=**/CTPConnectionTest*
+      run: ./gradlew build -x :extensions:swt:test -PexcludeTests=**/CTPConnectionTest*
       shell: bash
       if: matrix.os == 'windows-latest'
     - name: Build with Gradle (MacOS)
