--- a/.github/workflows/ci-gradle-build.yml
+++ b/.github/workflows/ci-gradle-build.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        java: [1.8, 11]
 
     runs-on: ${{ matrix.os }}
 
@@ -17,7 +18,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java }}
         java-package: jdk+fx
     - name: Build with Gradle (Linux)
       run: ./gradlew build -x :extensions:swt:test
