--- a/.github/workflows/ci-gradle-build.yml
+++ b/.github/workflows/ci-gradle-build.yml
@@ -8,20 +8,21 @@ jobs:
       DISPLAY: :1
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
+        #os: [ubuntu-latest, windows-latest, macos-latest]
         java: [1.8, 11]
 
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
         java-version: ${{ matrix.java }}
         java-package: jdk+fx
     - name: Build with Gradle (Linux)
-      run: ./gradlew build -x :extensions:swt:test
+      run: ./gradlew build
       if: matrix.os == 'ubuntu-latest'
     - name: Build with Gradle (Windows)
       run: ./gradlew build -x :extensions:swt:test -PexcludeTests=**/CTPConnectionTest*
