Integrate Github into the IssueBrowser demo application. Add filter by label/keyword. Fixes #687.

--- a/extensions/issuesbrowser/build.gradle
+++ b/extensions/issuesbrowser/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile project(':extensions:nachocalendar')
     compile project(':extensions:jgoodiesforms')
     compile files('lib/http.jar')
+    compile 'org.kohsuke:github-api:1.111'
 }
 
 /**
