--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-nextReleaseVersion = 1.12.0
-isSnapshot = true
+nextReleaseVersion = 1.11.1203
+isSnapshot = false
 javaTargetVersion = 1.8
 mavenSnapshotsRepositoryId = oss-nexus-snapshots
 mavenSnapshotsRepositoryUrl = https://oss.sonatype.org/content/repositories/snapshots
